# NexusD-PubSub

./: CMakeLists.txt  LICENSE  README.md
clients/: README.md
clients/cpp/: CMakeLists.txt  README.md
clients/cpp/examples/: publish.cpp  subscribe.cpp
clients/cpp/include/nexusd_client/: client.hpp
clients/cpp/src/: client.cpp
clients/csharp/: NexusdClient.sln  README.md
clients/csharp/NexusdClient/: Client.cs  NexusdClient.csproj
clients/csharp/NexusdClient.Examples/: NexusdClient.Examples.csproj  Program.cs
clients/node/: README.md  package.json  tsconfig.json
clients/node/examples/: publish.ts  subscribe.ts
clients/node/src/: client.ts  index.ts  types.ts
clients/python/: README.md  pyproject.toml
clients/python/examples/: async_example.py  publish.py  subscribe.py
clients/python/nexusd_client/: __init__.py  client.py  exceptions.py
clients/rust/: Cargo.toml  README.md  build.rs
clients/rust/examples/: publish.rs  subscribe.rs
clients/rust/src/: client.rs  error.rs  lib.rs
cmake/: FetchGrpc.cmake  GenerateProto.cmake  NexusdExport.cmake
docs/: ARCHITECTURE.md  CHANGELOG.md  CLIENT_RESILIENCE.md  DOCKER.md  KUBERNETES.md  NEXTSTEP.md  ROADMAP.md  USE_CASES.md  design.md
include/nexusd/core/: discovery_agent.hpp  export.hpp  peer_registry.hpp  subscriber_queue.hpp  topic_message_buffer.hpp
include/nexusd/daemon/: config.hpp
include/nexusd/net/: export.hpp  platform.hpp  udp_socket.hpp
include/nexusd/services/: export.hpp  mesh_client.hpp  mesh_service.hpp  sidecar_service.hpp
include/nexusd/utils/: crc64.hpp  export.hpp  logger.hpp  uuid.hpp
proto/: discovery.proto  mesh.proto  sidecar.proto
src/: CMakeLists.txt
src/core/: CMakeLists.txt  discovery_agent.cpp  peer_registry.cpp  topic_message_buffer.cpp
src/daemon/: CMakeLists.txt  main.cpp
src/net/: CMakeLists.txt  udp_socket.cpp
src/proto/: CMakeLists.txt
src/services/: CMakeLists.txt  mesh_client.cpp  mesh_service.cpp  sidecar_service.cpp
src/utils/: CMakeLists.txt  crc64.cpp  logger.cpp  uuid.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_two_nodes.cpp
tests/unit/: CMakeLists.txt  test_config.cpp  test_crc64.cpp  test_logger.cpp  test_peer_registry.cpp  test_subscriber_queue.cpp  test_topic_message_buffer.cpp  test_udp_socket.cpp  test_uuid.cpp
tools/cli/: CMakeLists.txt  README.md
tools/cli/src/: cli.cpp  cli.hpp  command_parser.cpp  command_parser.hpp  discovery.cpp  discovery.hpp  grpc_client.cpp  grpc_client.hpp  main.cpp  output_formatter.cpp  output_formatter.hpp
tools/cli/src/commands/: client_cmd.cpp  debug_cmd.cpp  discover_cmd.cpp  info_cmd.cpp  mesh_cmd.cpp  monitor_cmd.cpp  publish_cmd.cpp  pubsub_cmd.cpp  subscribe_cmd.cpp
tools/cli/src/utils/: string_utils.hpp
tools/demo/: README.md  cluster.conf  start.bat  start.sh  stop.bat  stop.sh
