[build-system]
requires = ["setuptools>=61.0", "grpcio-tools>=1.60.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusd-client"
version = "1.0.0"
description = "Python client for NexusD pub/sub sidecar daemon"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "NexusD Contributors"}
]
keywords = ["pubsub", "grpc", "nexusd", "messaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.60.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/nexusd/nexusd"
Repository = "https://github.com/nexusd/nexusd"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexusd_client*"]

[tool.setuptools.package-data]
nexusd_client = ["py.typed"]
