[package]
name = "nexusd-client"
version = "1.1.0"
edition = "2021"
description = "Rust client library for NexusD pub/sub sidecar daemon"
license = "MIT"
repository = "https://github.com/nexusd/nexusd"
keywords = ["pubsub", "grpc", "nexusd", "messaging", "async"]
categories = ["network-programming", "asynchronous"]

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
thiserror = "1.0"
tracing = "0.1"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"

[[example]]
name = "publish"
path = "examples/publish.rs"

[[example]]
name = "subscribe"
path = "examples/subscribe.rs"
